@@ -41,8 +41,11 @@ hockeypuck (0.7~a2) precise; urgency=low
     - Fixed template context passthru issues.
   * www/templates/header.tmpl:
     - Add link to PKS status page. LP: #1075391
+  * mgo/keystats.go:
+    - Add map-reduce to calculate hourly and daily totals of
+      key creation and modification. LP: #1075391
 
- -- Casey Marshall <casey.marshall@gazzang.com>  Thu, 29 Nov 2012 22:27:25 -0600
+ -- Casey Marshall <casey.marshall@gazzang.com>  Sat, 01 Dec 2012 18:43:23 -0600
 
 hockeypuck (0.6) precise; urgency=low
 
